syntax = "proto3";

package request;

option java_multiple_files = true;
option java_package = "grpc.account.v2.dto.request";

message ResetPasswordRequest {
  string email = 1;
}